--- a/_config.yml
+++ b/_config.yml
@@ -20,4 +20,5 @@ author:
 # Custom vars
 version:          1.0.0
 
-github:			  https://github.com/sonal-saldanha/  
+github:
+repo:			  github.com/sonal-saldanha/sonal-saldanha.github.io
