--- a/_config.yml
+++ b/_config.yml
@@ -1,24 +1,24 @@
 # Dependencies
 markdown:         redcarpet
-highlighter:      rouge
+pygments:         true
 
 # Permalinks
 permalink:        pretty
 
 # Setup
 title:            Lanyon
-tagline:          ''
+tagline:          'A Jekyll theme'
 description:      'A reserved <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that places the utmost gravity on content with a hidden drawer. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
-url:              https://sonal-saldanha.github.io
+url:              http://lanyon.getpoole.com
 baseurl:          '/'
 paginate:         5
 
 author:
-  name:           'Sonal Saldanha'
-  url:            https://twitter.com/sonalsaldanha
+  name:           'Mark Otto'
+  url:            https://twitter.com/mdo
 
 # Custom vars
 version:          1.0.0
 
 github:
-repo:			  github.com/sonal-saldanha/sonal-saldanha.github.io
+  repo:           https://github.com/poole/lanyon
